--- a/DnAPresa.UI/Views/Web.config
+++ b/DnAPresa.UI/Views/Web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="DnAPresa.UI" />
+        <add namespace="DnAPresa"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
